# Twease

./: CMakeLists.txt  README.md
include/Twease/: Animation.h  Ease.h  Twease.h  Tween.h
src/: Twease.cpp
